Fix awkward sticking out of border radius

--- a/inst/ui-editor-react/src/PortalModal.module.css
+++ b/inst/ui-editor-react/src/PortalModal.module.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   border-radius: var(--corner-radius);
+  overflow: scroll;
 }
 
 .title {
